--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -5,4 +6,168 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="route_btn_margin_right">0dp</dimen>
+
+    <dimen name="account_note_padding">8dp</dimen>
+    <dimen name="action_bar_height">56dp</dimen>
+    <dimen name="action_bar_height_w_dialog_title_top_bottom_margin">80dp</dimen>
+    <dimen name="action_bar_height_w_dialog_title_top_bottom_margin_top_notice">180dp</dimen>
+    <dimen name="action_bar_height_w_vertical_in_between_spacing">64dp</dimen>
+    <dimen name="badge_elevation">4dp</dimen>
+    <dimen name="basecardview_cardCornerRadius">4dp</dimen>
+    <dimen name="basecardview_minHeight">100dp</dimen>
+    <dimen name="basecardview_spacing">8dp</dimen>
+    <dimen name="basecardview_spacing_half">4dp</dimen>
+    <dimen name="bike_dock_fab_content_size">36dp</dimen>
+    <dimen name="bikes_docks_ring_width">2dp</dimen>
+    <dimen name="body_text_size">14sp</dimen>
+    <dimen name="button_corner_radius">2dp</dimen>
+    <dimen name="button_text_size">16sp</dimen>
+    <dimen name="caption_text_size">12sp</dimen>
+    <dimen name="cardview_compat_inset_shadow">1dp</dimen>
+    <dimen name="cardview_default_elevation">2dp</dimen>
+    <dimen name="cardview_default_radius">2dp</dimen>
+    <dimen name="circle_size">8dp</dimen>
+    <dimen name="design_appbar_elevation">4dp</dimen>
+    <dimen name="design_bottom_navigation_active_item_max_width">168dp</dimen>
+    <dimen name="design_bottom_navigation_active_text_size">14sp</dimen>
+    <dimen name="design_bottom_navigation_height">56dp</dimen>
+    <dimen name="design_bottom_navigation_item_max_width">96dp</dimen>
+    <dimen name="design_bottom_navigation_margin">8dp</dimen>
+    <dimen name="design_bottom_navigation_text_size">12sp</dimen>
+    <dimen name="design_bottom_sheet_modal_elevation">16dp</dimen>
+    <dimen name="design_bottom_sheet_peek_height_min">64dp</dimen>
+    <dimen name="design_fab_border_width">0.5dp</dimen>
+    <dimen name="design_fab_elevation">6dp</dimen>
+    <dimen name="design_fab_image_size">24dp</dimen>
+    <dimen name="design_fab_size_mini">40dp</dimen>
+    <dimen name="design_fab_size_normal">56dp</dimen>
+    <dimen name="design_fab_translation_z_pressed">6dp</dimen>
+    <dimen name="design_navigation_elevation">16dp</dimen>
+    <dimen name="design_navigation_icon_padding">32dp</dimen>
+    <dimen name="design_navigation_icon_size">24dp</dimen>
+    <dimen name="design_navigation_padding_bottom">8dp</dimen>
+    <dimen name="design_navigation_separator_vertical_padding">8dp</dimen>
+    <dimen name="design_snackbar_elevation">6dp</dimen>
+    <dimen name="design_snackbar_padding_horizontal">12dp</dimen>
+    <dimen name="design_snackbar_padding_vertical">14dp</dimen>
+    <dimen name="design_snackbar_text_size">14sp</dimen>
+    <dimen name="design_tab_max_width">264dp</dimen>
+    <dimen name="design_tab_text_size">14sp</dimen>
+    <dimen name="design_tab_text_size_2line">12sp</dimen>
+    <dimen name="dialog_left_right_inner_padding">12dp</dimen>
+    <dimen name="dialog_left_right_outer_padding">12dp</dimen>
+    <dimen name="dialog_left_right_padding">24dp</dimen>
+    <dimen name="dialog_title_top_bottom_margin">24dp</dimen>
+    <dimen name="directions_route_width">6dp</dimen>
+    <dimen name="directions_search_padding_top_w_action_bar_height">72dp</dimen>
+    <dimen name="directions_search_shadow_elevation">4dp</dimen>
+    <dimen name="directions_steps_pager_shadow_elevation">4dp</dimen>
+    <dimen name="disabled_alpha_material_dark">0.3</dimen>
+    <dimen name="disabled_alpha_material_light">0.26</dimen>
+    <dimen name="disabled_edit_text_underline_spacing">6dp</dimen>
+    <dimen name="divider_height">2dp</dimen>
+    <dimen name="edit_text_hack_margin_left">-4dp</dimen>
+    <dimen name="fab_bikes_docks_margin_bottom">8dp</dimen>
+    <dimen name="fab_bikes_docks_size">56dp</dimen>
+    <dimen name="fab_image_size">24dp</dimen>
+    <dimen name="fab_size">40dp</dimen>
+    <dimen name="flow_btn_height">56dp</dimen>
+    <dimen name="focused_button_border_stroke_width">2dp</dimen>
+    <dimen name="form_bottom_padding">16dp</dimen>
+    <dimen name="form_btn_height">36dp</dimen>
+    <dimen name="form_end_padding">16dp</dimen>
+    <dimen name="form_section_half_spacing">4dp</dimen>
+    <dimen name="form_section_header_text_bottom_spacing">10dp</dimen>
+    <dimen name="form_section_header_text_top_spacing">12dp</dimen>
+    <dimen name="form_section_spacing">8dp</dimen>
+    <dimen name="form_start_padding">16dp</dimen>
+    <dimen name="form_top_padding">16dp</dimen>
+    <dimen name="group_sort_button_size">12sp</dimen>
+    <dimen name="half_body_text_size">7sp</dimen>
+    <dimen name="highlight_alpha_material_colored">0.26</dimen>
+    <dimen name="highlight_alpha_material_dark">0.2</dimen>
+    <dimen name="highlight_alpha_material_light">0.12</dimen>
+    <dimen name="horizontal_spacing">16dp</dimen>
+    <dimen name="horizontal_spacing_between_form_elements">8dp</dimen>
+    <dimen name="info_bottom_sheet_shadow_elevation">4dp</dimen>
+    <dimen name="info_window_header_height">72dp</dimen>
+    <dimen name="info_window_line2_default_size">@dimen/body_text_size</dimen>
+    <dimen name="info_window_line2_showing_min_size">8dp</dimen>
+    <dimen name="info_window_sponsor_height">144dp</dimen>
+    <dimen name="info_window_toolbar_height">80dp</dimen>
+    <dimen name="item_touch_helper_max_drag_scroll_per_frame">20dp</dimen>
+    <dimen name="item_touch_helper_swipe_escape_max_velocity">800dp</dimen>
+    <dimen name="item_touch_helper_swipe_escape_velocity">120dp</dimen>
+    <dimen name="large_vertical_text_spacing">12dp</dimen>
+    <dimen name="list_header_item_height">48dp</dimen>
+    <dimen name="list_item_action_icon_size">24dp</dimen>
+    <dimen name="list_item_icon_horizontal_spacing">16dp</dimen>
+    <dimen name="list_item_icon_left_horizontal_spacing">8dp</dimen>
+    <dimen name="list_item_icon_size">40dp</dimen>
+    <dimen name="list_item_title_text_bottom_padding">8dp</dimen>
+    <dimen name="list_item_title_text_shrunk_bottom_padding">0dp</dimen>
+    <dimen name="list_item_title_text_subscription_bottom_padding">4dp</dimen>
+    <dimen name="map_bounds_btn_bottom_margin">32dp</dimen>
+    <dimen name="map_bounds_padding">56dp</dimen>
+    <dimen name="map_legend_item_size">72dp</dimen>
+    <dimen name="menu_item_height">55dp</dimen>
+    <dimen name="menu_section_header_height">56dp</dimen>
+    <dimen name="menu_section_separator_view_height">10dp</dimen>
+    <dimen name="menu_transparent_strip_width">60dp</dimen>
+    <dimen name="mini_pin_size">8dp</dimen>
+    <dimen name="mini_pin_zoom_threshold">14.5</dimen>
+    <dimen name="notification_large_icon_height">64dp</dimen>
+    <dimen name="notification_large_icon_width">64dp</dimen>
+    <dimen name="notification_subtext_size">12dp</dimen>
+    <dimen name="open_rentals_widget_icon_size">20dp</dimen>
+    <dimen name="open_rentals_widget_row_height">42dp</dimen>
+    <dimen name="place_autocomplete_button_padding">16dp</dimen>
+    <dimen name="place_autocomplete_powered_by_google_height">40dp</dimen>
+    <dimen name="place_autocomplete_powered_by_google_start">16dp</dimen>
+    <dimen name="place_autocomplete_prediction_height">72dp</dimen>
+    <dimen name="place_autocomplete_prediction_horizontal_margin">16dp</dimen>
+    <dimen name="place_autocomplete_prediction_primary_text">16sp</dimen>
+    <dimen name="place_autocomplete_prediction_secondary_text">14sp</dimen>
+    <dimen name="place_autocomplete_progress_horizontal_margin">16dp</dimen>
+    <dimen name="place_autocomplete_progress_size">24dp</dimen>
+    <dimen name="place_autocomplete_separator_start">72dp</dimen>
+    <dimen name="poi_pin_size">32dp</dimen>
+    <dimen name="purchase_summary_horizontal_spacing">24dp</dimen>
+    <dimen name="refresh_stations_half_ic_bg_size">18dp</dimen>
+    <dimen name="refresh_stations_ic_bg_size">36dp</dimen>
+    <dimen name="refresh_stations_ic_size">24dp</dimen>
+    <dimen name="refresh_stations_shadow_elevation">2dp</dimen>
+    <dimen name="rental_timer_inner_ring_padding">3dp</dimen>
+    <dimen name="rental_timer_inner_ring_width">4dp</dimen>
+    <dimen name="rental_timer_ring_width">10dp</dimen>
+    <dimen name="rental_timer_shadow_elevation">2dp</dimen>
+    <dimen name="rental_timer_widget_right_margin">10dp</dimen>
+    <dimen name="scheme_suspended_left_right_margin">16dp</dimen>
+    <dimen name="scheme_suspended_padding">8dp</dimen>
+    <dimen name="search_action_view_max_width">9001dp</dimen>
+    <dimen name="search_list_item_height">72dp</dimen>
+    <dimen name="section_header_height">46dp</dimen>
+    <dimen name="shade_info_bar_height">56dp</dimen>
+    <dimen name="shade_info_bar_left_right_padding">16dp</dimen>
+    <dimen name="single_line_height">56dp</dimen>
+    <dimen name="single_line_list_item_layout_height">56dp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
+    <dimen name="sponsor_pin_large_size">24dp</dimen>
+    <dimen name="sponsor_pin_small_size">18dp</dimen>
+    <dimen name="standard_border">5dp</dimen>
+    <dimen name="standard_vertical_text_spacing">4dp</dimen>
+    <dimen name="station_decoration_extra_width">0dp</dimen>
+    <dimen name="station_marker_bounce">6dp</dimen>
+    <dimen name="sub_header_text_size">16sp</dimen>
+    <dimen name="sub_header_top_padding">12dp</dimen>
+    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="toolbar_height">32dp</dimen>
+    <dimen name="toolbar_shadow_elevation">6dp</dimen>
+    <dimen name="two_line_list_item_horizontal_spacing">16dp</dimen>
+    <dimen name="two_line_list_item_layout_height">72dp</dimen>
+    <dimen name="vertical_in_between_spacing">8dp</dimen>
+    <dimen name="vertical_top_bottom_spacing">16dp</dimen>
+    <dimen name="vertical_top_rental_widget_spacing">45dp</dimen>
+    <dimen name="walkthrough_step_image_margin">5dp</dimen>
 </resources>
