--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,4 +29,67 @@
     <style name="Theme.Cyacle.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Cyacle.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+
+
+
+    <style name="SettingsChk">
+        <item name="android:layout_gravity">clip_horizontal</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="SettingsHeaderText">
+        <item name="android:paddingLeft">@dimen/horizontal_spacing</item>
+        <item name="android:paddingTop">24dp</item>
+        <item name="android:paddingRight">@dimen/horizontal_spacing</item>
+        <item name="android:paddingBottom">@dimen/vertical_in_between_spacing</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:minHeight">56dp</item>
+    </style>
+    <style name="SettingsRadioBtn">
+        <item name="android:layout_gravity">clip_horizontal</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="SettingsRow">
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:paddingLeft">@dimen/horizontal_spacing</item>
+        <item name="android:paddingTop">@dimen/vertical_in_between_spacing</item>
+        <item name="android:paddingRight">@dimen/horizontal_spacing</item>
+        <item name="android:paddingBottom">@dimen/vertical_in_between_spacing</item>
+        <item name="android:clickable">true</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">56dp</item>
+    </style>
+    <style name="SettingsRowText">
+        <item name="android:gravity">clip_horizontal</item>
+        <item name="android:layout_gravity">clip_horizontal</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:paddingLeft">@dimen/horizontal_spacing</item>
+        <item name="android:paddingTop">@dimen/vertical_in_between_spacing</item>
+        <item name="android:paddingRight">@dimen/horizontal_spacing</item>
+        <item name="android:paddingBottom">@dimen/vertical_in_between_spacing</item>
+        <item name="android:clickable">true</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">56dp</item>
+    </style>
+    <style name="SettingsText">
+        <item name="android:layout_gravity">clip_horizontal</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+    <style name="VeryLightSecondaryDivider">
+    <item name="android:background">@color/divider_secondary_very_light_dark_color</item>
+    </style>
+    <style name="SecondaryDivider">
+    <item name="android:background">@color/divider_secondary_dark_color</item>
+    <item name="android:layout_height">1dp</item>
+    </style>
 </resources>
