--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.location.MapsFragment">
+    tools:context=".ui.bottom_fragments.MapsFragment">
 
 
     <TextView
@@ -27,7 +27,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.location.MapsFragment" />
+        tools:context=".ui.bottom_fragments.MapsFragment" />
 
     <LinearLayout
         android:id="@+id/topline"
