--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="colorDeSelected">#3C3B3D</color>
 
     <color name="divider_secondary_very_light_dark_color">#21000000</color>
+    <color name="facebook_color">#1877F2</color>
 
 </resources>
