--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -26,8 +26,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.bottom_fragments.MapsFragment" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/topline"
