--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/settingsFragment">
+    app:startDestination="@id/mapsFragment">
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.oman.sayakil.ui.bottom_fragments.SettingsFragment"
@@ -24,4 +24,59 @@
         android:name="com.oman.sayakil.ui.bottom_fragments.RefreshFragment"
         android:label="fragment_refresh"
         tools:layout="@layout/fragment_refresh" />
+    <fragment
+        android:id="@+id/billingStatementsFragment"
+        android:name="com.oman.sayakil.ui.drawer_fragments.BillingStatementsFragment"
+        android:label="fragment_billing_statements"
+        tools:layout="@layout/fragment_billing_statements" />
+    <fragment
+        android:id="@+id/memberShipFragment"
+        android:name="com.oman.sayakil.ui.fragments.MemberShipFragment"
+        android:label="fragment_member_ship"
+        tools:layout="@layout/fragment_member_ship" />
+    <fragment
+        android:id="@+id/paymentInformationFragment"
+        android:name="com.oman.sayakil.ui.drawer_fragments.PaymentInformationFragment"
+        android:label="fragment_payment_information"
+        tools:layout="@layout/fragment_payment_information" />
+    <activity
+        android:id="@+id/profileActivity"
+        android:name="com.oman.sayakil.ui.activities.ProfileActivity"
+        android:label="activity_profile"
+        tools:layout="@layout/activity_profile" />
+    <activity
+        android:id="@+id/splashActivity"
+        android:name="com.oman.sayakil.ui.activities.SplashActivity"
+        android:label="activity_splash"
+        tools:layout="@layout/activity_splash" />
+    <fragment
+        android:id="@+id/rentTimerFragment"
+        android:name="com.oman.sayakil.ui.drawer_fragments.RentTimerFragment"
+        android:label="fragment_rent_timer"
+        tools:layout="@layout/fragment_rent_timer" />
+    <fragment
+        android:id="@+id/messageFragment"
+        android:name="com.oman.sayakil.ui.drawer_fragments.MessageFragment"
+        android:label="fragment_message"
+        tools:layout="@layout/fragment_message" />
+    <fragment
+        android:id="@+id/tripsFragment"
+        android:name="com.oman.sayakil.ui.drawer_fragments.TripsFragment"
+        android:label="fragment_trips"
+        tools:layout="@layout/fragment_trips" />
+    <fragment
+        android:id="@+id/statisticsFragment"
+        android:name="com.oman.sayakil.ui.drawer_fragments.StatisticsFragment"
+        android:label="fragment_statistics"
+        tools:layout="@layout/fragment_statistics" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.oman.sayakil.ui.activities.MainActivity"
+        android:label="content_main"
+        tools:layout="@layout/content_main" />
+    <activity
+        android:id="@+id/signInActivity"
+        android:name="com.oman.sayakil.ui.activities.SignInActivity"
+        android:label="activity_signin"
+        tools:layout="@layout/activity_signin" />
 </navigation>
