--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,54 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.bottom_fragments.MapsFragment">
 
-
-    <TextView
-        android:id="@+id/latlong"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="@color/primary_light"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="2"
-        android:padding="5dp"
-        android:textColor="#fff"
-        android:textSize="20sp" />
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:context=".ui.bottom_fragments.MapsFragment" />
 
     <LinearLayout
-        android:id="@+id/topline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:background="#FF0000"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:visibility="gone"
-        android:weightSum="1">
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/map_icon_background"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/nointernet"
-            android:layout_width="0dp"
+            android:id="@+id/iv_speedometr"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:gravity="center"
-            android:text="No internet connection!"
-            android:textColor="#fff"
-            android:textSize="17sp" />
+            android:layout_gravity="center"
+            android:text="km/hr"
+            android:textColor="#FFF" />
+
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/iv_limit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_alarm" />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_search" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/night_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_sun" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/img_zoom_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_zoom_in" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/img_zoom_out"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_zoom_out" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_baseline_map_24" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/iv_traffic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/map_icon_background"
+            android:padding="10sp"
+            app:srcCompat="@drawable/ic_traffic" />
+
+
+    </LinearLayout>
+
 
 </RelativeLayout>
