--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -82,6 +82,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
+            app:itemIconTint="@drawable/bottom_nav_selector"
             app:srcCompat="@drawable/ic_baseline_map_24" />
 
         <Space
@@ -94,6 +95,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
+            app:itemIconTint="@drawable/bottom_nav_selector"
             app:srcCompat="@drawable/ic_baseline_map_24" />
         <Space
             android:layout_width="wrap_content"
@@ -105,6 +107,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
+            app:itemIconTint="@drawable/bottom_nav_selector"
             app:srcCompat="@drawable/ic_satellite" />
 
         <Space
@@ -117,6 +120,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
+            app:itemIconTint="@drawable/bottom_nav_selector"
             app:srcCompat="@drawable/ic_terrain" />
 
         <Space
@@ -130,6 +134,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
+            app:itemIconTint="@drawable/bottom_nav_selector"
             app:srcCompat="@drawable/ic_hybrid" />
 
         <Space
@@ -142,6 +147,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/map_icon_background"
             android:padding="10sp"
+            app:itemIconTint="@drawable/bottom_nav_selector"
             app:srcCompat="@drawable/ic_mylocation" />
 
 
