--- a/app/src/main/res/layout/fragment_key.xml
+++ b/app/src/main/res/layout/fragment_key.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.bottom_fragments.RefreshFragment">
+    tools:context=".ui.bottom_fragments.KeyFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/tv_key"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:textSize="20sp"
         android:gravity="center"
-        android:text="Refresh Fragment"
+        android:text="Not Key"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
