--- a/app/src/main/res/layout/item_cycle.xml
+++ b/app/src/main/res/layout/item_cycle.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:text="AED"
+                    android:text="OMR"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_gravity="start"
