--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,10 +22,10 @@
             android:id="@+id/nav_member_ship"
             android:icon="@drawable/ic_membership"
             android:title="@string/menu_member" />
-<!--        <item-->
-<!--            android:id="@+id/nav_trips"-->
-<!--            android:icon="@drawable/ic_trip"-->
-<!--            android:title="@string/menu_trip" />-->
+        <item
+            android:id="@+id/nav_rent"
+            android:icon="@drawable/ic_bike"
+            android:title="Rent" />
 <!--        <item-->
 <!--            android:id="@+id/nav_billing"-->
 <!--            android:icon="@drawable/ic_billing_statement"-->
